--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
    <h1>This is a Header</h1>
    <p>this is paragrahph</p>
    <P>this is second paragraph.</P>
+   <p>This is lite server</p>
 </body>
 </html>
